kube/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ns_name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend:v2
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
          requests:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 7070
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: backend
      restartPolicy: Always
