kube/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ns_name
spec:
  selector:
    app: backend
  ports:
  - port: 7070
    targetPort: 7070
  type: ClusterIP
