kube/kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: ns_name
spec:
  parentRefs:
    - name: gateway
      sectionName: http
      namespace: gateway
  hostnames:
    - "backend.zeus"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/backend"
      backendRefs:
        - name: backend
          namespace: phrases
          port: 7070
